# Friday

./: .env  .env.example  .gitignore  README.md  launch_friday.bat  pyproject.toml
.claude/: settings.local.json
agents/: __init__.py  base.py  chat.py  critic.py  debugger.py  evolution.py  executor.py  memory_agent.py  planner.py  registry.py  system.py  vision.py  voice.py  web.py
api/: __init__.py  cli.py  main.py  routes.py  websocket.py
app/: __init__.py  cli.py  main.py
app/agents/: __init__.py  base.py  debug.py  executor.py  memory.py  planner.py  registry.py  system.py  vision.py  voice.py  web.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  events.py  (+2 more)
core/: __init__.py  config.py  events.py  evolution.py  intelligence.py  intent.py  llm.py  models.py  orchestrator.py  prompting.py  realtime.py  runtime.py  security.py  voice_engine.py  voice_session.py
friday-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-3d-core/: index.html  package-lock.json  package.json
frontend-antigravity/: index.html  package-lock.json  package.json
frontend-particles/: index.html  package-lock.json  package.json
memory/: __init__.py  embeddings.py  store.py
scripts/: pull_models.ps1  setup_windows.ps1
system_control/: __init__.py  controller.py
tests/: test_embeddings.py  test_intent.py  test_prompting.py  test_security.py
tools/: __init__.py  browser.py  filesystem.py  image.py  python_exec.py  registry.py  shell.py  system.py  voice.py  web.py
web_agent/: __init__.py  service.py
(+57 files in other folders)
