[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-local"
version = "0.1.0"
description = "Local-first multi-agent AI operating system with realtime presence and system control."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.23",
  "duckduckgo-search>=6.4.2",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "playwright>=1.49.1",
  "rich>=13.9.4",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0"
]
embeddings = [
  "sentence-transformers>=3.3.1"
]
vision = [
  "accelerate>=1.2.1",
  "diffusers>=0.32.1",
  "Pillow>=11.1.0",
  "torch>=2.5.1",
  "transformers>=4.47.1"
]
voice = [
  "faster-whisper>=1.1.1",
  "pyttsx3>=2.98",
  "soundfile>=0.13.0"
]

[project.scripts]
friday = "api.cli:main"
friday-api = "api.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "api*", "core*", "agents*", "tools*", "memory*", "web_agent*", "system_control*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
